Slight improvements and bugfixes